--- a/src/styles.css
+++ b/src/styles.css
@@ -9,11 +9,11 @@
 }
 
 .hero-element {
-    padding: 20px;
+    padding: 0 20px;
     background-color: var(--accent-color);
     height: 100vh;
     width: 100vw;
-    border: 8px double #2F3E46;
+    border: 8px double var(--primary-color);
 }
 
 .hero-content {
@@ -31,22 +31,26 @@
 body {
     font-family: var(--primary-font-family);
     color: var(--primary-color);
+    background-color: var(--fifth-color);
 }
 
 h1 {
-    font-size: 96px;
+    font-size: 100px;
     font-family: var(--heading-font-family);
     line-height: 1.5;
     color: var(--primary-color);
+    text-transform: capitalize;
+    letter-spacing: 5px;
 }
 
 h2 {
     font-size: 24px;
-    color: var(--primary-color);
+    color: var(--secondary-color);
     letter-spacing: 3px;
 }
 
-.hero-element p {
+
+.hero-content p {
     font-size: 36px;
     line-height: 1;
 }
@@ -64,7 +68,53 @@ h2 {
     border: 1px solid var(--secondary-color);
   }
 
+  .main-body {
+    padding: 200px;
+    margin-top: 100px;
+    height: 100vh;
+    width: 100vw;
+  }
+
+  .main-body-content h2 {
+    font-size: 40px;
+    font-weight: 600;
+    line-height: 2;
+  }
+
+  .main-body-content p {
+    font-size: 18px;
+    font-weight: 400;
+    text-align: left;
+    line-height: 1.5;
+    letter-spacing: 2px;
+  }
+
+  .btn-branding {
+    color: var(--secondary-color);
+    border: 1px solid var(--secondary-color);
+    border-radius: 4px;
+    font-size: 18px;
+    line-height: 27px;
+    padding: 15px 30px;
+    font-weight: bold;
+  }
+
+  .homepage-buttons {
+    display: flex;
+    justify-content: center;
+  }
+
+  .homepage-about-button {
+    margin: 20px;
+  }
+  .homepage-projects-button {
+    margin: 20px;
+  }
+
 @media (max-width: 920px) {
+    .hero-content {
+        padding: 0 20px;
+    }
     .hero-element h1 {
         font-size: 38px;
         line-height: 1.5;
