--- a/src/styles.css
+++ b/src/styles.css
@@ -71,6 +71,7 @@ h2 {
   .main-body {
     padding: 200px;
     margin-top: 100px;
+    margin-bottom: 100px;
     height: 100vh;
     width: 100vw;
   }
@@ -118,7 +119,7 @@ h2 {
     margin: 20px;
   }
 
-@media (max-width: 920px) {
+@media (max-width: 768px) {
     .hero-content {
         padding: 0 20px;
     }
