--- a/src/styles.css
+++ b/src/styles.css
@@ -68,7 +68,7 @@ h2 {
     border: 1px solid var(--secondary-color);
   }
 
-  .main-body {
+  .main-body-content {
     padding: 200px;
     margin-top: 100px;
     margin-bottom: 100px;
@@ -117,6 +117,13 @@ h2 {
   }
   .homepage-projects-button {
     margin: 20px;
+  }
+
+  .head-shot {
+    border-radius:100%;
+    border: 4px solid #2F3E46;
+    float: right;
+    background-color: #354F52;
   }
 
 @media (max-width: 768px) {
