--- a/src/styles.css
+++ b/src/styles.css
@@ -28,10 +28,22 @@
   flex-direction: column;
 }
 
+
+.main-body-content {
+  margin-top: 100px;
+}
+
+.main-body-element {
+  padding: 0 100px;
+}
+
+
 body {
     font-family: var(--primary-font-family);
     color: var(--primary-color);
     background-color: var(--fifth-color);
+    height: 100vh;
+    width: 100vw;
 }
 
 h1 {
@@ -66,14 +78,6 @@ h2 {
   .hero-btn-branding:hover {
     color: var(--secondary-color);
     border: 1px solid var(--secondary-color);
-  }
-
-  .main-body-content {
-    padding: 200px;
-    margin-top: 100px;
-    margin-bottom: 100px;
-    height: 100vh;
-    width: 100vw;
   }
 
   .main-body-content h2 {
@@ -130,16 +134,16 @@ h2 {
     .hero-content {
         padding: 0 20px;
     }
-    .main-body{
+    .main-body-element{
         padding: 50px 20px 50px;
-    }
+    } 
     .main-body-content {
-        padding: 0 15px 50px;
-        align-items: justify;
+        align-items: center;
         justify-content: center;
+        text-align: center;
     }
     .hero-element h1 {
-        font-size: 38px;
+        font-size: 50px;
         line-height: 1.5;
     }
 
@@ -149,5 +153,16 @@ h2 {
     .hero-element p {
         font-size: 25px;
         line-height: 1;
+    }
+  
+    .certificates {
+      width: 100%;
+      height: auto;
+      margin-bottom: 20px;
+    }
+    .head-shot{
+      float: none;
+      align-items: center;
+      justify-content: center;
     }
 }
