--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
 :root {
     --primary-font-family: "poppins", sans-serif;
-    --heading-font-family: "playfair display", serif;
+    --heading-font-family: "poppins", sans-serif;
     --primary-color: #2F3E46;
     --secondary-color: #354F52;
     --tertiary-color: #52796F;
@@ -9,15 +9,16 @@
 }
 
 .hero-element {
-    padding: 0 20px;
+    padding: 0 5px;
     background-color: var(--accent-color);
-    border: 10px solid var(--primary-color);
     height: 100vh;
     width: 100vw;
+    background-image: url(/media/background.jpeg);
+    background-size: cover;
 }
 
 .hero-content {
-    position: absolute;
+  position: absolute;
   height: 100%;
   width: 100%;
   top: 0;
@@ -88,21 +89,26 @@ h1 {
     font-size: 110px;
     font-family: var(--heading-font-family);
     line-height: 1.5;
-    color: var(--primary-color);
-    text-transform: capitalize;
-    letter-spacing: 5px;
-}
+    color: white;
+    text-transform: uppercase;
+    letter-spacing: 30px;
+    text-shadow: 1px 0px 2px rgba(0, 0, 0, 0.2);}
 
 h2 {
     font-size: 24px;
-    color: var(--secondary-color);
     letter-spacing: 3px;
+}
+
+.hero-content h2 {
+  color: white;
+
 }
 
 
 .hero-content p {
     font-size: 36px;
     line-height: 1;
+    color: var(--primary-color);
 }
 
 .hero-btn-branding {
@@ -110,12 +116,12 @@ h2 {
     font-size: 30px;
     padding: 8px 26px;
     transition: all 100ms ease;
-    color: var(--primary-color);
+    color: white;
   }
   
   .hero-btn-branding:hover {
-    color: var(--secondary-color);
-    border: 1px solid var(--secondary-color);
+    color: white;
+    border: 1px solid white;
   }
 
   .main-body-content h2 {
