--- a/src/styles.css
+++ b/src/styles.css
@@ -22,8 +22,9 @@ h1 {
     line-height: 1.5;
     color: white;
     text-transform: uppercase;
-    letter-spacing: 30px;
-    text-shadow: 1px 0px 2px rgba(0, 0, 0, 0.2);}
+    letter-spacing: 20px;
+    text-shadow: 1px 0px 2px rgba(0, 0, 0, 0.2);
+  font-weight: 600;}
 
 h2 {
     font-size: 24px;
@@ -67,9 +68,8 @@ display: flex;
 align-items: left;
 justify-content: left;
 flex-direction: column;
-padding: 100px 200px;
+padding: 100px 250px;
 }
-
 
 .content-homepage {
   margin-top: 100px;
@@ -84,7 +84,7 @@ padding: 100px 200px;
   width: 100vw;
 }
 .content-container-subpage {
-  padding: 50px 200px;
+  padding: 0px 250px;
   height: 100vh;
   width: 100vw;
 }
@@ -98,10 +98,30 @@ padding: 100px 200px;
   letter-spacing: 2px;
 }
 
+.about-content {
+  text-align: justify;
+}
+
+.about-content img {
+  margin-left: 50px;
+}
+
 .tools-container-subpage {
   margin-bottom: 100px;
-  
 }
+
+.tools-container-subpage h2 {
+  font-size: 40px;
+  text-transform: uppercase;
+  margin-bottom: 20px;
+}
+.certificates-container h2 {
+  font-size: 40px;
+  text-transform: uppercase;
+  margin-bottom: 20px;
+}
+
+
 .tools-container-homepage {
   display: flex;
   align-items: center;
@@ -127,11 +147,6 @@ padding: 100px 200px;
   filter: grayscale(0.6);
 }
 
-
-.content-container-homepage h2 {
-  font-size: 16px;
-}
-
 .hero-btn-branding {
     border-radius: 4px;
     font-size: 30px;
@@ -146,7 +161,7 @@ padding: 100px 200px;
   }
 
   .content-homepage h2 {
-    font-size: 400px;
+    font-size: 55px;
     font-weight: 600;
     line-height: 2;
     height: 100%;
@@ -159,7 +174,7 @@ padding: 100px 200px;
     letter-spacing: 2px;
   }
 
-  .main-body-content p {
+  .content-homepage p {
     font-size: 18px;
     font-weight: 400;
     text-align: left;
@@ -185,6 +200,10 @@ padding: 100px 200px;
 
   .about-button-homepage {
     margin: 20px;
+    font-size: 15px;
+    font-family: var(--primary-font-family);
+    font-weight: normal;
+  
   }
   .projects-button-homepage {
     margin: 20px;
@@ -193,9 +212,15 @@ padding: 100px 200px;
   .head-shot {
     border-radius:100%;
     border: 4px solid #2F3E46;
-    float: right;
     background-color: #354F52;
-    margin-top: 80px;
+    display: block;
+    margin: 30px auto;
+  }
+
+  .heading-about {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
   }
 
 @media (max-width: 768px) {
