--- a/src/styles.css
+++ b/src/styles.css
@@ -191,6 +191,16 @@ padding: 100px 250px;
     padding: 15px 30px;
     font-weight: bold;
   }
+  .btn-branding-projects {
+    color: var(--secondary-color);
+    font-size: 16px;
+    line-height: 27px;
+    padding: 10px 30px;
+    font-weight: bold;
+    width: 190px;
+    border: 1px solid var(--secondary-color);
+    border-radius: 4px;
+  }
 
   .buttons-homepage {
     display: flex;
@@ -222,6 +232,17 @@ padding: 100px 250px;
     flex-direction: row;
     align-items: center;
   }
+
+  .projects-content-container h2 {
+    font-size: 25px;
+  }
+
+  .tag-line {
+    font-size: 14px;
+    font-family: cursive;
+    padding-bottom: 10px;
+  }
+
 
 @media (max-width: 768px) {
     .hero-container-homepage {
