--- a/src/styles.css
+++ b/src/styles.css
@@ -12,8 +12,6 @@ body {
     font-family: var(--primary-font-family);
     color: var(--primary-color);
     background-color: var(--fifth-color);
-    height: 100vh;
-    width: 100vw;
 }
 
 h1 {
@@ -24,13 +22,14 @@ h1 {
     text-transform: uppercase;
     letter-spacing: 20px;
     text-shadow: 1px 0px 2px rgba(0, 0, 0, 0.2);
-  font-weight: 600;}
+    font-weight: 600;}
 
 h2 {
     font-size: 24px;
     letter-spacing: 3px;
     color: white;
 }
+
 .hero-container-homepage {
     padding: 0 5px;
     background-color: var(--accent-color);
@@ -55,20 +54,18 @@ h2 {
 .hero-container-subpage {
   padding: 0 5px;
   background-color: var(--fifth-color);
-  height: 30vh;
-  width: 100vw;
+  margin-bottom: 300px;
 }
 
 .hero-content-subpage {
 position: absolute;
-width: 100%;
 top: 0;
 left: 0;
 display: flex;
 align-items: left;
 justify-content: left;
 flex-direction: column;
-padding: 100px 250px;
+margin: 100px 250px;
 }
 
 .content-homepage {
@@ -85,8 +82,6 @@ padding: 100px 250px;
 }
 .content-container-subpage {
   padding: 0px 250px;
-  height: 100vh;
-  width: 100vw;
 }
 
 .about-content-container {
@@ -234,7 +229,7 @@ padding: 100px 250px;
   }
 
   .sub-subheading {
-    font-size: 25px;
+    font-size: 26px;
   }
 
   .projects-content-container p {
@@ -284,9 +279,6 @@ padding: 100px 250px;
     }  
     .hero-container-subpage {
         padding: 0 20px;
-    }
-    hero-content-subpage h1 {
-      font-size: ;
     }
     .content-container-homepage{
         padding: 50px 20px 50px;
