--- a/src/styles.css
+++ b/src/styles.css
@@ -1,42 +1,85 @@
 :root {
-    --primary-font-family: "poppins", sans-serif;
-    --heading-font-family: "poppins", sans-serif;
-    --primary-color: #2F3E46;
-    --secondary-color: #354F52;
-    --tertiary-color: #52796F;
-    --accent-color: #84A98C;
-    --fifth-color: #CAD2C5;
+  --primary-font-family: "poppins", sans-serif;
+  --heading-font-family: "poppins", sans-serif;
+  --primary-color: #2F3E46;
+  --secondary-color: #354F52;
+  --tertiary-color: #52796f;
+  --accent-color: #84A98C;
+  --fifth-color: #CAD2C5;
 }
 
 body {
-    font-family: var(--primary-font-family);
-    color: var(--primary-color);
-    background-color: var(--fifth-color);
+  font-family: var(--primary-font-family);
+  color: var(--primary-color);
+  background-color: var(--fifth-color);
 }
 
 h1 {
-    font-size: 110px;
-    font-family: var(--heading-font-family);
-    line-height: 1.5;
-    color: white;
-    text-transform: uppercase;
-    letter-spacing: 20px;
-    text-shadow: 1px 0px 2px rgba(0, 0, 0, 0.2);
-    font-weight: 600;}
+  font-size: 110px;
+  font-family: var(--heading-font-family);
+  line-height: 1.5;
+  color: white;
+  text-transform: uppercase;
+  letter-spacing: 20px;
+  text-shadow: 1px 0px 2px rgba(0, 0, 0, 0.2);
+  font-weight: 600;}
 
 h2 {
-    font-size: 24px;
-    letter-spacing: 3px;
-    color: white;
+  font-size: 24px;
+  letter-spacing: 3px;
+  color: white;
 }
 
+/* Navbar */
+
+.navbar {
+  justify-content: space-between;
+  background-color: white;
+  font-size: 20px;
+}
+
+.navbar-nav a {
+  color: var(--secondary-color);
+  padding: 0 15px !important;
+}
+
+.nav-link:hover {
+  color: var(--accent-color);
+}
+
+.logo {
+  font-size: 30px;
+  border-radius: 5px;
+  letter-spacing: 6px;
+  margin: 0px;
+  padding: 0px;
+  color: var(--secondary-color);
+  font-weight: 600;
+}
+
+.navbar-brand {
+  margin-left: 20px;
+}
+
+.active {
+  font-weight: 600;
+}
+
+/* Homepage */
+    /* Hero */
+
 .hero-container-homepage {
-    padding: 0 5px;
-    background-color: var(--accent-color);
-    height: 100vh;
-    width: 100vw;
-    background-image: url(/media/background.jpeg);
-    background-size: cover;
+  background-color: var(--accent-color);
+  height: 100vh;
+  width: 100vw;
+}
+
+.homepage-bg {
+  height: 100vh;
+  width: 100vw;
+  background-image: url(/media/background.jpeg);
+  background-size: cover;
+  filter: saturate(0.8);
 }
 
 .hero-content-homepage {
@@ -51,28 +94,10 @@ h2 {
   flex-direction: column;
 }
 
-.hero-container-subpage {
-  padding: 0 5px;
-  background-color: var(--fifth-color);
-  margin-bottom: 300px;
-}
-
-.hero-content-subpage {
-position: absolute;
-top: 0;
-left: 0;
-display: flex;
-align-items: left;
-justify-content: left;
-flex-direction: column;
-margin: 100px 250px;
-}
+    /* Content */
 
 .content-homepage {
   margin-top: 100px;
-}
-.content-subpage {
-  margin-top: 0;
 }
 
 .content-container-homepage {
@@ -80,42 +105,6 @@ margin: 100px 250px;
   height: 100vh;
   width: 100vw;
 }
-.content-container-subpage {
-  padding: 0px 250px;
-}
-
-.about-content-container {
-  margin-bottom: 100px;
-  font-size: 18px;
-  font-weight: 400;
-  text-align: left;
-  line-height: 1.5;
-  letter-spacing: 2px;
-}
-
-.about-content {
-  text-align: justify;
-}
-
-.about-content img {
-  margin-left: 50px;
-}
-
-.tools-container-subpage {
-  margin-bottom: 100px;
-}
-
-.tools-container-subpage h2 {
-  font-size: 40px;
-  text-transform: uppercase;
-  margin-bottom: 20px;
-}
-.certificates-container h2 {
-  font-size: 40px;
-  text-transform: uppercase;
-  margin-bottom: 20px;
-}
-
 
 .tools-container-homepage {
   display: flex;
@@ -134,6 +123,91 @@ margin: 100px 250px;
   letter-spacing: 1.5;
 }
 
+.subheading {
+  font-size: 60px;
+  font-weight: 200;
+  line-height: 2;
+  height: 100%;
+  width: 100%;
+  top: 0;
+  left: 0;
+  display: flex;
+  align-items: left;
+  justify-content: left;
+  letter-spacing: 2px;
+}
+
+/* Subpage */
+    /* Hero */
+
+.hero-container-subpage {
+  padding: 0 5px;
+  background-color: var(--fifth-color);
+  margin: 200px 0px;
+}
+
+.hero-content-subpage {
+position: absolute;
+top: 0;
+left: 0;
+display: flex;
+align-items: left;
+justify-content: left;
+flex-direction: column;
+margin: 100px 250px;
+}
+
+.hero-content-subpage h1 {
+  color: #2F3E46;
+}
+
+.content-homepage p {
+  font-size: 18px;
+  font-weight: 400;
+  text-align: left;
+  line-height: 1.5;
+  letter-spacing: 2px;
+}
+
+    /* Content */
+
+.content-subpage {
+  margin-bottom: 100px;
+}
+
+.content-container-subpage {
+  padding: 0px 250px;
+}
+
+.about-content-container {
+  font-size: 18px;
+  font-weight: 400;
+  text-align: left;
+  line-height: 1.5;
+  letter-spacing: 2px;
+}
+
+.about-content {
+  text-align: justify;
+}
+
+.about-content img {
+  margin-left: 50px;
+}
+
+.tools-container-subpage h2 {
+  font-size: 40px;
+  text-transform: uppercase;
+  margin-bottom: 20px;
+}
+
+.certificates-container h2 {
+  font-size: 40px;
+  text-transform: uppercase;
+  margin-bottom: 20px;
+  margin-top: 20px;
+}
+
 .certificates-container {
   margin-bottom: 100px;
 }
@@ -142,182 +216,132 @@ margin: 100px 250px;
   filter: grayscale(0.6);
 }
 
+
+  
+
+/* Buttons */
+
 .hero-btn-branding {
-    border-radius: 4px;
-    font-size: 30px;
-    padding: 8px 26px;
-    transition: all 100ms ease;
-    color: white;
-  }
-  
-  .hero-btn-branding:hover {
-    color: white;
-    border: 1px solid white;
+  border-radius: 4px;
+  font-size: 30px;
+  padding: 8px 26px;
+  transition: all 100ms ease;
+  color: white;
+}
+
+.hero-btn-branding:hover {
+  color: white;
+  border: 1px solid white;
+}
+
+.btn-branding {
+  color: var(--secondary-color);
+  border: 1px solid var(--secondary-color);
+  border-radius: 4px;
+  font-size: 18px;
+  line-height: 27px;
+  padding: 15px 30px;
+  font-weight: 600;
   }
 
-  .subheading {
-    font-size: 60px;
-    font-weight: 200;
-    line-height: 2;
-    height: 100%;
-    width: 100%;
-    top: 0;
-    left: 0;
-    display: flex;
-    align-items: left;
-    justify-content: left;
-    letter-spacing: 2px;
+.btn-branding-projects {
+  color: var(--secondary-color);
+  font-size: 16px;
+  line-height: 27px;
+  padding: 10px 30px;
+  font-weight: bold;
+  width: 190px;
+  border: 1px solid var(--secondary-color);
+  border-radius: 4px;
   }
 
-  .content-homepage p {
-    font-size: 18px;
-    font-weight: 400;
-    text-align: left;
-    line-height: 1.5;
-    letter-spacing: 2px;
-  }
- 
-  .btn-branding {
-    color: var(--secondary-color);
-    border: 1px solid var(--secondary-color);
-    border-radius: 4px;
-    font-size: 18px;
-    line-height: 27px;
-    padding: 15px 30px;
-    font-weight: bold;
-  }
-  .btn-branding-projects {
-    color: var(--secondary-color);
-    font-size: 16px;
-    line-height: 27px;
-    padding: 10px 30px;
-    font-weight: bold;
-    width: 190px;
-    border: 1px solid var(--secondary-color);
-    border-radius: 4px;
-  }
+.buttons-homepage {
+  display: flex;
+  justify-content: center;
+  margin-top: 100px;
+}
 
-  .buttons-homepage {
-    display: flex;
-    justify-content: center;
-    margin-top: 100px;
-  }
+.about-button-homepage {
+  margin: 20px;
+  font-size: 15px;
+  font-family: var(--primary-font-family);
+  font-weight: normal;
 
-  .about-button-homepage {
-    margin: 20px;
-    font-size: 15px;
-    font-family: var(--primary-font-family);
-    font-weight: normal;
-  
-  }
-  .projects-button-homepage {
-    margin: 20px;
-  }
+}
+.projects-button-homepage {
+  margin: 20px;
+}
 
-  .head-shot {
-    border-radius:100%;
-    border: 4px solid #2F3E46;
-    background-color: #354F52;
-    display: block;
-    margin: 30px auto;
-  }
+.head-shot {
+  border-radius:100%;
+  border: 18px solid #2F3E46;
+  background-color: #52796f;
+  display: block;
+  margin: 30px auto;
+}
 
-  .heading-about {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-  }
+.heading-about {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
 
-  .sub-subheading {
-    font-size: 26px;
-  }
+.sub-subheading {
+  font-size: 26px;
+}
 
-  .projects-content-container p {
-    font-size: 18px;
-    font-weight: 400;
-    line-height: 1.5;
-    letter-spacing: 2px;
-  }
+.projects-content-container p {
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 1.5;
+  letter-spacing: 2px;
+}
 
-  .contact-content-container {
-    display: flex;
-    justify-content:left;
-    margin-top: 100px;
-  }
+.contact-content-container {
+  display: flex;
+  justify-content:left;
+  margin-top: 100px;
+}
 
-  .contact-content-container div {
-    margin-right: 100px;
-  }
+.contact-content-container div {
+  margin-right: 100px;
+}
 
-  .contact-content-container a {
-    text-decoration: none;
-    color: var(--primary-color);
-    background-color: var(--accent-color, 0.1);
-    padding: 2px 4px;
-  }
+.contact-content-container a {
+  text-decoration: none;
+  color: var(--primary-color);
+  background-color: var(--accent-color, 0.1);
+  padding: 2px 4px;
+}
 
-  .contact-content-container a:hover {
-    text-decoration: none;
-    color: white;
-  }
+.contact-content-container a:hover {
+  text-decoration: none;
+  color: white;
+}
 
+.tag-line {
+  font-size: 14px;
+  font-family: cursive;
+  padding-bottom: 10px;
+}
 
-  .tag-line {
-    font-size: 14px;
-    font-family: cursive;
-    padding-bottom: 10px;
-  }
+.scroll-up-button {
+  font-size: 16px;
+  margin-bottom: 60px;
+  margin-top: 55px;
+  text-align: center;
+}
 
-  .hero-content-subpage h1 {
-    color: #2F3E46;
-  }
+.scroll-up-text {
+  color: black;
+  font-weight: 300;
+  text-decoration: none;
+}
 
+.scroll-up-text:hover {
+  color: black;
+}
 
 @media (max-width: 768px) {
-    .hero-container-homepage {
-        padding: 0 20px;
-    }  
-    .hero-container-subpage {
-        padding: 0 20px;
-    }
-    .content-container-homepage{
-        padding: 50px 20px 50px;
-    } 
-    .content-container-subpage{
-        padding: 50px 20px 50px;
-    } 
-    .content-homepage {
-        align-items: center;
-        justify-content: center;
-        text-align: center;
-    }
-    .content-subpage {
-        align-items: center;
-        justify-content: center;
-        text-align: center;
-    }
-    .hero-content-homepage h1 {
-        font-size: 50px;
-        line-height: 1.5;
-    }
-    .hero-content-subpage h1 {
-        font-size: 50px;
-        line-height: 1.5;
-    }
-
-    .hero-content-homepage h2 {
-        font-size: 20px;
-    }
   
-    .certificates {
-      width: 100%;
-      height: auto;
-      margin-bottom: 20px;
-    }
-
-    .head-shot{
-      float: none;
-      align-items: center;
-      justify-content: center;
-    }
 }
