--- a/src/styles.css
+++ b/src/styles.css
@@ -235,12 +235,6 @@ margin: 100px 250px;
 
 }
 
-.heading-about {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-}
-
 .sub-subheading {
   font-size: 26px;
 }
@@ -445,6 +439,75 @@ footer .reach-out {
   color: #52796f;
 }
 
+/* MEDIA QUERY */
+
 @media (max-width: 768px) {
+  h1 {
+    font-size: 30px;
+    margin: 0 auto;
+  }
+
+  h2 {
+    font-size: 24px;
+  }
+
+  .hero-content-homepage h2 {
+    font-size: ;
+  }
+
+  .content-container-homepage {
+    padding: 10px 20px;
+    height: 100vh;
+    width: 100vw;
+  }
+
+  .hero-container-subpage {
+    padding: 0 5px;
+    margin: 200px 0px;
+  }
   
+  .hero-content-subpage {
+    margin: 0;
+    padding: 100px 25px 20px;
+  }
+
+  .hero-content-subpage h1 {
+    font-size: 55px;
+    display: flex;
+    justify-content: center;
+    }
+
+  .content-container-subpage {
+    padding: 0px 25px;
+  }
+
+  .about-content img {
+    margin-left: 0;
+  }
+
+  .tools-container-subpage h2 {
+    display: flex;
+    justify-content: center;
+    font-size: 28px;
+    margin-bottom: 20px;
+  }
+
+  .certificates-container h2 {
+    display: flex;
+    justify-content: center;
+    font-size: 28px;
+    margin-bottom: 20px;
+    margin-top: 20px;
+  }
+
+  .certificates {
+    margin-bottom: 15px;
+  }
+
+  .buttons-homepage {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-top: 80px;
+  }
 }
