--- a/src/styles.css
+++ b/src/styles.css
@@ -285,6 +285,11 @@ margin-top: 15px;
  font-weight: 400;
  font-size: 19px;
 }
+.contact-form-container .thanks {
+ font-weight: 400;
+ font-size: 20px;
+ text-align: center;
+}
 
 .contact-form-container form {
   display: flex;
