--- a/src/styles.css
+++ b/src/styles.css
@@ -79,9 +79,8 @@ h2 {
 .homepage-bg {
   height: 100vh;
   width: 100vw;
-  /*background-image: url(/media/background.jpeg);
-  background-size: cover;
-  filter: saturate(60%);*/
+  background: #84AA8B;
+  background: linear-gradient(135deg, #84AA8B, #354F52);
 }
 
 .hero-content-homepage {
@@ -198,10 +197,6 @@ h2 {
   letter-spacing: 2px;
 }
 
-.about-content {
-  text-align: justify;
-}
-
 .about-content img {
   margin-left: 50px;
 }
@@ -282,7 +277,7 @@ margin-top: 15px;
 }
 
 #projects-container {
-  padding: 0 200px;
+  padding: 0 250px;
 }
 .contact-links-container {
   display: flex;
@@ -425,14 +420,20 @@ margin-top: 15px;
 
 .btn-branding-projects {
   color: var(--secondary-color);
-  font-size: 16px;
+  font-size: 14px;
   line-height: 27px;
-  padding: 10px 30px;
+  padding: 10px 20px;
   font-weight: bold;
-  width: 190px;
+  width: 175px;
   border: 1px solid var(--secondary-color);
-  border-radius: 4px;
-  }
+  border-radius: 6px;
+  text-transform: lowercase;
+}
+
+.btn-branding-projects:hover {
+  color: var(--fifth-color);
+  background-color: var(-);
+}
 
 .buttons-homepage {
   display: flex;
@@ -479,6 +480,12 @@ footer {
   align-items: center;
   justify-content: center;
 }
+
+footer .social-links {
+  display: flex;
+  flex-direction: row;
+}
+
 
 footer .social-links a {
   color: var(--tertiary-color);
@@ -599,7 +606,7 @@ footer .reach-out {
   }
   
   .hero-content-subpage h1 {
-    font-size: 40px;
+    font-size: 35px;
   }
 
   .hero-content-subpage h2 {
@@ -618,7 +625,7 @@ footer .reach-out {
   /* About */
   .about-content-container {
     font-size: 16px;
-    text-align: justify;
+    text-align: center;
     letter-spacing: 1.5;
   }
 
@@ -687,6 +694,10 @@ footer .reach-out {
   
   .card-text {
     font-size: 16px;
+  }
+
+  .card-body {
+  font-family: var(--primary-font-family);  
   }
 
    /* Contact */
